--- a/src/project-detail.html
+++ b/src/project-detail.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
 	<title>Детальная проекта</title>
 </head>
 
@@ -36,12 +37,149 @@
 			</section>
 			<section class="project-content">
 				<div class="project-content__container container">
-					<div class="project-content__inner"></div>
+					<div class="project-content__inner">
+						<div class="project-content__item item-big-anim" data-fancybox="gallery"
+							data-src="./assets/images/project-detail/project-1.webp">
+							<img src="./assets/images/project-detail/project-1.webp" alt="" data-fancybox="gallery">
+							<div class="project-content__item-btn">
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+									fill="none">
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M15 0.75C15 0.335786 15.3358 0 15.75 0H23.25C23.6642 0 24 0.335786 24 0.75V8.25C24 8.66421 23.6642 9 23.25 9C22.8358 9 22.5 8.66421 22.5 8.25V1.5H15.75C15.3358 1.5 15 1.16421 15 0.75Z"
+										fill="white" />
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M23.7803 0.21967C24.0732 0.512563 24.0732 0.987437 23.7803 1.28033L14.4053 10.6553C14.1124 10.9482 13.6376 10.9482 13.3447 10.6553C13.0518 10.3624 13.0518 9.88756 13.3447 9.59467L22.7197 0.21967C23.0126 -0.0732233 23.4874 -0.0732233 23.7803 0.21967Z"
+										fill="white" />
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M0.75 15C1.16421 15 1.5 15.3358 1.5 15.75V22.5H8.25C8.66421 22.5 9 22.8358 9 23.25C9 23.6642 8.66421 24 8.25 24H0.75C0.335786 24 0 23.6642 0 23.25V15.75C0 15.3358 0.335786 15 0.75 15Z"
+										fill="white" />
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M10.6553 13.3447C10.9482 13.6376 10.9482 14.1124 10.6553 14.4053L1.28033 23.7803C0.987437 24.0732 0.512563 24.0732 0.21967 23.7803C-0.0732233 23.4874 -0.0732233 23.0126 0.21967 22.7197L9.59467 13.3447C9.88756 13.0518 10.3624 13.0518 10.6553 13.3447Z"
+										fill="white" />
+								</svg>
+							</div>
+						</div>
+						<div class="project-content__item small small--bl small--top" data-fancybox="gallery"
+							data-src="./assets/images/project-detail/project-2.webp">
+							<img src="./assets/images/project-detail/project-2.webp" alt="">
+							<div class="project-content__item-btn">
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+									fill="none">
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M15 0.75C15 0.335786 15.3358 0 15.75 0H23.25C23.6642 0 24 0.335786 24 0.75V8.25C24 8.66421 23.6642 9 23.25 9C22.8358 9 22.5 8.66421 22.5 8.25V1.5H15.75C15.3358 1.5 15 1.16421 15 0.75Z"
+										fill="white" />
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M23.7803 0.21967C24.0732 0.512563 24.0732 0.987437 23.7803 1.28033L14.4053 10.6553C14.1124 10.9482 13.6376 10.9482 13.3447 10.6553C13.0518 10.3624 13.0518 9.88756 13.3447 9.59467L22.7197 0.21967C23.0126 -0.0732233 23.4874 -0.0732233 23.7803 0.21967Z"
+										fill="white" />
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M0.75 15C1.16421 15 1.5 15.3358 1.5 15.75V22.5H8.25C8.66421 22.5 9 22.8358 9 23.25C9 23.6642 8.66421 24 8.25 24H0.75C0.335786 24 0 23.6642 0 23.25V15.75C0 15.3358 0.335786 15 0.75 15Z"
+										fill="white" />
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M10.6553 13.3447C10.9482 13.6376 10.9482 14.1124 10.6553 14.4053L1.28033 23.7803C0.987437 24.0732 0.512563 24.0732 0.21967 23.7803C-0.0732233 23.4874 -0.0732233 23.0126 0.21967 22.7197L9.59467 13.3447C9.88756 13.0518 10.3624 13.0518 10.6553 13.3447Z"
+										fill="white" />
+								</svg>
+							</div>
+						</div>
+						<div class="project-content__item small small--tr small--top" data-fancybox="gallery"
+							data-src="./assets/project-banner.webm">
+							<video loop preload="auto" muted>
+								<source src="./assets/project-banner.mp4" type="video/mp4">
+								<source src="./assets/project-banner.webm" type="video/webm">
+							</video>
+							<img src="./assets/images/project-detail/project-3.webp" alt="">
+							<div class="project-content__item-btn">
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+									fill="none">
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M15 0.75C15 0.335786 15.3358 0 15.75 0H23.25C23.6642 0 24 0.335786 24 0.75V8.25C24 8.66421 23.6642 9 23.25 9C22.8358 9 22.5 8.66421 22.5 8.25V1.5H15.75C15.3358 1.5 15 1.16421 15 0.75Z"
+										fill="white" />
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M23.7803 0.21967C24.0732 0.512563 24.0732 0.987437 23.7803 1.28033L14.4053 10.6553C14.1124 10.9482 13.6376 10.9482 13.3447 10.6553C13.0518 10.3624 13.0518 9.88756 13.3447 9.59467L22.7197 0.21967C23.0126 -0.0732233 23.4874 -0.0732233 23.7803 0.21967Z"
+										fill="white" />
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M0.75 15C1.16421 15 1.5 15.3358 1.5 15.75V22.5H8.25C8.66421 22.5 9 22.8358 9 23.25C9 23.6642 8.66421 24 8.25 24H0.75C0.335786 24 0 23.6642 0 23.25V15.75C0 15.3358 0.335786 15 0.75 15Z"
+										fill="white" />
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M10.6553 13.3447C10.9482 13.6376 10.9482 14.1124 10.6553 14.4053L1.28033 23.7803C0.987437 24.0732 0.512563 24.0732 0.21967 23.7803C-0.0732233 23.4874 -0.0732233 23.0126 0.21967 22.7197L9.59467 13.3447C9.88756 13.0518 10.3624 13.0518 10.6553 13.3447Z"
+										fill="white" />
+								</svg>
+							</div>
+						</div>
+						<div class="project-content__item item-big-anim" data-fancybox="gallery"
+							data-src="./assets/images/project-detail/project-4.webp">
+							<img src="./assets/images/project-detail/project-4.webp" alt="">
+							<div class="project-content__item-btn">
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+									fill="none">
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M15 0.75C15 0.335786 15.3358 0 15.75 0H23.25C23.6642 0 24 0.335786 24 0.75V8.25C24 8.66421 23.6642 9 23.25 9C22.8358 9 22.5 8.66421 22.5 8.25V1.5H15.75C15.3358 1.5 15 1.16421 15 0.75Z"
+										fill="white" />
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M23.7803 0.21967C24.0732 0.512563 24.0732 0.987437 23.7803 1.28033L14.4053 10.6553C14.1124 10.9482 13.6376 10.9482 13.3447 10.6553C13.0518 10.3624 13.0518 9.88756 13.3447 9.59467L22.7197 0.21967C23.0126 -0.0732233 23.4874 -0.0732233 23.7803 0.21967Z"
+										fill="white" />
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M0.75 15C1.16421 15 1.5 15.3358 1.5 15.75V22.5H8.25C8.66421 22.5 9 22.8358 9 23.25C9 23.6642 8.66421 24 8.25 24H0.75C0.335786 24 0 23.6642 0 23.25V15.75C0 15.3358 0.335786 15 0.75 15Z"
+										fill="white" />
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M10.6553 13.3447C10.9482 13.6376 10.9482 14.1124 10.6553 14.4053L1.28033 23.7803C0.987437 24.0732 0.512563 24.0732 0.21967 23.7803C-0.0732233 23.4874 -0.0732233 23.0126 0.21967 22.7197L9.59467 13.3447C9.88756 13.0518 10.3624 13.0518 10.6553 13.3447Z"
+										fill="white" />
+								</svg>
+							</div>
+						</div>
+						<div class="project-content__item small small--tr small--bottom" data-fancybox="gallery"
+							data-src="./assets/images/project-detail/project-5.webp">
+							<img src="./assets/images/project-detail/project-5.webp" alt="">
+							<div class="project-content__item-btn">
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+									fill="none">
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M15 0.75C15 0.335786 15.3358 0 15.75 0H23.25C23.6642 0 24 0.335786 24 0.75V8.25C24 8.66421 23.6642 9 23.25 9C22.8358 9 22.5 8.66421 22.5 8.25V1.5H15.75C15.3358 1.5 15 1.16421 15 0.75Z"
+										fill="white" />
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M23.7803 0.21967C24.0732 0.512563 24.0732 0.987437 23.7803 1.28033L14.4053 10.6553C14.1124 10.9482 13.6376 10.9482 13.3447 10.6553C13.0518 10.3624 13.0518 9.88756 13.3447 9.59467L22.7197 0.21967C23.0126 -0.0732233 23.4874 -0.0732233 23.7803 0.21967Z"
+										fill="white" />
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M0.75 15C1.16421 15 1.5 15.3358 1.5 15.75V22.5H8.25C8.66421 22.5 9 22.8358 9 23.25C9 23.6642 8.66421 24 8.25 24H0.75C0.335786 24 0 23.6642 0 23.25V15.75C0 15.3358 0.335786 15 0.75 15Z"
+										fill="white" />
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M10.6553 13.3447C10.9482 13.6376 10.9482 14.1124 10.6553 14.4053L1.28033 23.7803C0.987437 24.0732 0.512563 24.0732 0.21967 23.7803C-0.0732233 23.4874 -0.0732233 23.0126 0.21967 22.7197L9.59467 13.3447C9.88756 13.0518 10.3624 13.0518 10.6553 13.3447Z"
+										fill="white" />
+								</svg>
+							</div>
+						</div>
+						<div class="project-content__item small small--bottom" data-fancybox="gallery"
+							data-src="./assets/images/project-detail/project-6.webp">
+							<img src="./assets/images/project-detail/project-6.webp" alt="">
+							<div class="project-content__item-btn">
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+									fill="none">
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M15 0.75C15 0.335786 15.3358 0 15.75 0H23.25C23.6642 0 24 0.335786 24 0.75V8.25C24 8.66421 23.6642 9 23.25 9C22.8358 9 22.5 8.66421 22.5 8.25V1.5H15.75C15.3358 1.5 15 1.16421 15 0.75Z"
+										fill="white" />
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M23.7803 0.21967C24.0732 0.512563 24.0732 0.987437 23.7803 1.28033L14.4053 10.6553C14.1124 10.9482 13.6376 10.9482 13.3447 10.6553C13.0518 10.3624 13.0518 9.88756 13.3447 9.59467L22.7197 0.21967C23.0126 -0.0732233 23.4874 -0.0732233 23.7803 0.21967Z"
+										fill="white" />
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M0.75 15C1.16421 15 1.5 15.3358 1.5 15.75V22.5H8.25C8.66421 22.5 9 22.8358 9 23.25C9 23.6642 8.66421 24 8.25 24H0.75C0.335786 24 0 23.6642 0 23.25V15.75C0 15.3358 0.335786 15 0.75 15Z"
+										fill="white" />
+									<path fill-rule="evenodd" clip-rule="evenodd"
+										d="M10.6553 13.3447C10.9482 13.6376 10.9482 14.1124 10.6553 14.4053L1.28033 23.7803C0.987437 24.0732 0.512563 24.0732 0.21967 23.7803C-0.0732233 23.4874 -0.0732233 23.0126 0.21967 22.7197L9.59467 13.3447C9.88756 13.0518 10.3624 13.0518 10.6553 13.3447Z"
+										fill="white" />
+								</svg>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 			<include src="./components/footer.html"></include>
 		</div>
 	</div>
+	<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+	<script>
+		Fancybox.bind("[data-fancybox]", {
+			// Your custom options
+		});
+	</script>
 </body>
 
 </html>
