--- a/src/project-detail.html
+++ b/src/project-detail.html
@@ -38,9 +38,10 @@
 			<section class="project-content">
 				<div class="project-content__container container">
 					<div class="project-content__inner">
+						<!-- В data-src="" вставляем путь к видео или картинке -->
 						<div class="project-content__item item-big-anim" data-fancybox="gallery"
 							data-src="./assets/images/project-detail/project-1.webp">
-							<img src="./assets/images/project-detail/project-1.webp" alt="" data-fancybox="gallery">
+							<img src="./assets/images/project-detail/project-1.webp" alt="">
 							<div class="project-content__item-btn">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
 									fill="none">
@@ -82,10 +83,6 @@
 						</div>
 						<div class="project-content__item small small--tr small--top" data-fancybox="gallery"
 							data-src="./assets/project-banner.webm">
-							<video loop preload="auto" muted>
-								<source src="./assets/project-banner.mp4" type="video/mp4">
-								<source src="./assets/project-banner.webm" type="video/webm">
-							</video>
 							<img src="./assets/images/project-detail/project-3.webp" alt="">
 							<div class="project-content__item-btn">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -171,14 +168,117 @@
 					</div>
 				</div>
 			</section>
+			<section class="project-video">
+				<div class="project-video__inner">
+					<div class="project-video__content">
+						<video preload="auto" poster="./assets/images/project-detail/project-video.jpg">
+							<source src="./assets/project-banner.mp4" type="video/mp4">
+							<source src="./assets/project-banner.webm" type="video/webm">
+						</video>
+					</div>
+					<div class="project-video__button">
+						<div class="project-video__button-play active">
+							<svg xmlns="http://www.w3.org/2000/svg" width="143" height="164" viewBox="0 0 143 164"
+								fill="none">
+								<g filter="url(#filter0_b_1409_6214)">
+									<path d="M143 82L-7.16867e-06 164L0 -6.25073e-06L143 82Z" fill="white"
+										fill-opacity="0.5" />
+								</g>
+								<defs>
+									<filter id="filter0_b_1409_6214" x="-10" y="-10" width="163" height="184"
+										filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+										<feFlood flood-opacity="0" result="BackgroundImageFix" />
+										<feGaussianBlur in="BackgroundImageFix" stdDeviation="5" />
+										<feComposite in2="SourceAlpha" operator="in"
+											result="effect1_backgroundBlur_1409_6214" />
+										<feBlend mode="normal" in="SourceGraphic" in2="effect1_backgroundBlur_1409_6214"
+											result="shape" />
+									</filter>
+								</defs>
+							</svg>
+						</div>
+						<div class="project-video__button-pause">
+							<svg xmlns="http://www.w3.org/2000/svg" width="128" height="164" viewBox="0 0 128 164"
+								fill="none">
+								<g filter="url(#filter0_b_1409_6222)">
+									<rect width="54" height="164" fill="white" fill-opacity="0.5" />
+								</g>
+								<g filter="url(#filter1_b_1409_6222)">
+									<rect x="74" width="54" height="164" fill="white" fill-opacity="0.5" />
+								</g>
+								<defs>
+									<filter id="filter0_b_1409_6222" x="-10" y="-10" width="74" height="184"
+										filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+										<feFlood flood-opacity="0" result="BackgroundImageFix" />
+										<feGaussianBlur in="BackgroundImageFix" stdDeviation="5" />
+										<feComposite in2="SourceAlpha" operator="in"
+											result="effect1_backgroundBlur_1409_6222" />
+										<feBlend mode="normal" in="SourceGraphic" in2="effect1_backgroundBlur_1409_6222"
+											result="shape" />
+									</filter>
+									<filter id="filter1_b_1409_6222" x="64" y="-10" width="74" height="184"
+										filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+										<feFlood flood-opacity="0" result="BackgroundImageFix" />
+										<feGaussianBlur in="BackgroundImageFix" stdDeviation="5" />
+										<feComposite in2="SourceAlpha" operator="in"
+											result="effect1_backgroundBlur_1409_6222" />
+										<feBlend mode="normal" in="SourceGraphic" in2="effect1_backgroundBlur_1409_6222"
+											result="shape" />
+									</filter>
+								</defs>
+							</svg>
+						</div>
+					</div>
+				</div>
+			</section>
 			<include src="./components/footer.html"></include>
 		</div>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 	<script>
-		Fancybox.bind("[data-fancybox]", {
-			// Your custom options
-		});
+		if (window.outerWidth >= 768) {
+			Fancybox.bind(`[data-fancybox="gallery"]`, {
+				// Your custom options
+				beforeShow: function () {
+					$(this.content).addClass("fadeIn"); // Добавьте класс анимации к элементу fancybox
+				},
+				width: "100%",
+				height: "100%",
+				tpl: {
+					closeButton:
+						`<button data-fancybox-close class="f-button is-close-btn" title="{{CLOSE}}">
+						<svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none">
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M0.53033 16.4405C0.237437 16.1476 0.237437 15.6727 0.53033 15.3798L15.3796 0.530584C15.6725 0.237691 16.1473 0.237691 16.4402 0.530584C16.7331 0.823477 16.7331 1.29835 16.4402 1.59124L1.59099 16.4405C1.2981 16.7334 0.823223 16.7334 0.53033 16.4405Z" fill="white" />
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M0.53033 0.536076C0.823223 0.243183 1.2981 0.243183 1.59099 0.536076L16.4402 15.3853C16.7331 15.6782 16.7331 16.1531 16.4402 16.446C16.1473 16.7389 15.6725 16.7389 15.3796 16.446L0.53033 1.59674C0.237437 1.30384 0.237437 0.828969 0.53033 0.536076Z" fill="white" />
+						</svg>
+					</button >`,
+					main: `<div class="fancybox__container" role="dialog" aria-modal="true" aria-label="{{MODAL}}" tabindex="-1">
+                        <div class="fancybox__backdrop"></div>
+                        <div class="fancybox__carousel"></div>
+                        <button data-fancybox-close class="f-button is-close-btn" title="{{CLOSE}}">
+							<svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none">
+								<path fill-rule="evenodd" clip-rule="evenodd" d="M0.53033 16.4405C0.237437 16.1476 0.237437 15.6727 0.53033 15.3798L15.3796 0.530584C15.6725 0.237691 16.1473 0.237691 16.4402 0.530584C16.7331 0.823477 16.7331 1.29835 16.4402 1.59124L1.59099 16.4405C1.2981 16.7334 0.823223 16.7334 0.53033 16.4405Z" fill="white" />
+								<path fill-rule="evenodd" clip-rule="evenodd" d="M0.53033 0.536076C0.823223 0.243183 1.2981 0.243183 1.59099 0.536076L16.4402 15.3853C16.7331 15.6782 16.7331 16.1531 16.4402 16.446C16.1473 16.7389 15.6725 16.7389 15.3796 16.446L0.53033 1.59674C0.237437 1.30384 0.237437 0.828969 0.53033 0.536076Z" fill="white" />
+							</svg>
+						</button>
+                        </div>`
+				},
+				Carousel: {
+					infinite: true,
+					Navigation: {
+						prevTpl: `<svg xmlns="http://www.w3.org/2000/svg" width="24" height="17" viewBox="0 0 24 17" fill="none">
+  								<path fill-rule="evenodd" clip-rule="evenodd" d="M9.48346 16.4561C9.19056 16.749 8.71569 16.749 8.42279 16.4561L0.835296 8.86861C0.694644 8.72796 0.615626 8.53719 0.615626 8.33828C0.615626 8.13937 0.694644 7.9486 0.835296 7.80795L8.4228 0.220453C8.71569 -0.0724402 9.19056 -0.0724402 9.48346 0.220453C9.77635 0.513346 9.77635 0.988219 9.48346 1.28111L2.42629 8.33828L9.48346 15.3955C9.77635 15.6883 9.77635 16.1632 9.48346 16.4561Z" fill="white"/>
+  								<path fill-rule="evenodd" clip-rule="evenodd" d="M23.3672 8.33789C23.3672 8.7521 23.0314 9.08789 22.6172 9.08789L1.57969 9.08789C1.16548 9.08789 0.829689 8.7521 0.829689 8.33789C0.829689 7.92368 1.16548 7.58789 1.57969 7.58789L22.6172 7.58789C23.0314 7.58789 23.3672 7.92368 23.3672 8.33789Z" fill="white"/>
+							</svg>`,
+						nextTpl: `<svg xmlns="http://www.w3.org/2000/svg" width="23" height="17" viewBox="0 0 23 17" fill="none">
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M13.8759 0.21967C14.1688 -0.0732233 14.6437 -0.0732233 14.9366 0.21967L22.5241 7.80717C22.6647 7.94782 22.7438 8.13859 22.7438 8.3375C22.7438 8.53641 22.6647 8.72718 22.5241 8.86783L14.9366 16.4553C14.6437 16.7482 14.1688 16.7482 13.8759 16.4553C13.583 16.1624 13.583 15.6876 13.8759 15.3947L20.9331 8.3375L13.8759 1.28033C13.583 0.987437 13.583 0.512563 13.8759 0.21967Z" fill="white"/>
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M0 8.33789C0 7.92368 0.335786 7.58789 0.75 7.58789H21.7875C22.2017 7.58789 22.5375 7.92368 22.5375 8.33789C22.5375 8.7521 22.2017 9.08789 21.7875 9.08789H0.75C0.335786 9.08789 0 8.7521 0 8.33789Z" fill="white"/>
+							</svg>`,
+					},
+				},
+			});
+		}
+
 	</script>
 </body>
 
