--- a/src/project-detail.html
+++ b/src/project-detail.html
@@ -24,13 +24,13 @@
 								for discussing key economic issues. It is a meeting place for the highest level
 								government officials and the business elite.</div>
 						</div>
-						<div class="project-banner__content-footer text-18">Russia, St. Petersburg</div>
+						<div class="project-banner__content-footer text-18 desktop">Russia, St. Petersburg</div>
 					</div>
 					<div class="project-banner__back banner-back">
 						<video autoplay playsinline loop preload="auto" muted
 							poster="./assets/images/project-detail/project-video.jpg">
-							<source src="./assets/project-banner.mp4" type="video/mp4">
-							<source src="./assets/project-banner.webm" type="video/webm">
+							<source src="./assets/video/project-banner.mp4" type="video/mp4">
+							<source src="./assets/video/project-banner.webm" type="video/webm">
 						</video>
 					</div>
 				</div>
@@ -38,9 +38,8 @@
 			<section class="project-content">
 				<div class="project-content__container container">
 					<div class="project-content__inner">
-						<!-- В data-src="" вставляем путь к видео или картинке -->
-						<div class="project-content__item item-big-anim" data-fancybox="gallery"
-							data-src="./assets/images/project-detail/project-1.webp">
+						<a class="project-content__item item-big-anim" data-fancybox="gallery"
+							href="assets/images/project-1.webp">
 							<img src="./assets/images/project-detail/project-1.webp" alt="">
 							<div class="project-content__item-btn">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -59,9 +58,9 @@
 										fill="white" />
 								</svg>
 							</div>
-						</div>
-						<div class="project-content__item small small--bl small--top" data-fancybox="gallery"
-							data-src="./assets/images/project-detail/project-2.webp">
+						</a>
+						<a class="project-content__item small small--bl small--top" data-fancybox="gallery"
+							href="assets/images/project-2.webp">
 							<img src="./assets/images/project-detail/project-2.webp" alt="">
 							<div class="project-content__item-btn">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -80,9 +79,9 @@
 										fill="white" />
 								</svg>
 							</div>
-						</div>
-						<div class="project-content__item small small--tr small--top" data-fancybox="gallery"
-							data-src="./assets/project-banner.webm">
+						</a>
+						<a class="project-content__item small small--tr small--top" data-fancybox="gallery"
+							href="./project-banner.webm">
 							<img src="./assets/images/project-detail/project-3.webp" alt="">
 							<div class="project-content__item-btn">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -101,9 +100,9 @@
 										fill="white" />
 								</svg>
 							</div>
-						</div>
-						<div class="project-content__item item-big-anim" data-fancybox="gallery"
-							data-src="./assets/images/project-detail/project-4.webp">
+						</a>
+						<a class="project-content__item item-big-anim" data-fancybox="gallery"
+							href="assets/images/project-4.webp">
 							<img src="./assets/images/project-detail/project-4.webp" alt="">
 							<div class="project-content__item-btn">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -122,9 +121,9 @@
 										fill="white" />
 								</svg>
 							</div>
-						</div>
-						<div class="project-content__item small small--tr small--bottom" data-fancybox="gallery"
-							data-src="./assets/images/project-detail/project-5.webp">
+						</a>
+						<a class="project-content__item small small--tr small--bottom" data-fancybox="gallery"
+							href="assets/images/project-5.webp">
 							<img src="./assets/images/project-detail/project-5.webp" alt="">
 							<div class="project-content__item-btn">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -143,9 +142,9 @@
 										fill="white" />
 								</svg>
 							</div>
-						</div>
-						<div class="project-content__item small small--bottom" data-fancybox="gallery"
-							data-src="./assets/images/project-detail/project-6.webp">
+						</a>
+						<a class="project-content__item small small--bottom" data-fancybox="gallery"
+							href="assets/images/project-6.webp">
 							<img src="./assets/images/project-detail/project-6.webp" alt="">
 							<div class="project-content__item-btn">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -164,7 +163,7 @@
 										fill="white" />
 								</svg>
 							</div>
-						</div>
+						</a>
 					</div>
 				</div>
 			</section>
@@ -172,8 +171,8 @@
 				<div class="project-video__inner">
 					<div class="project-video__content">
 						<video preload="auto" poster="./assets/images/project-detail/project-video.jpg">
-							<source src="./assets/project-banner.mp4" type="video/mp4">
-							<source src="./assets/project-banner.webm" type="video/webm">
+							<source src="./assets/video/project-banner.mp4" type="video/mp4">
+							<source src="./assets/video/project-banner.webm" type="video/webm">
 						</video>
 					</div>
 					<div class="project-video__button">
@@ -231,28 +230,99 @@
 					</div>
 				</div>
 			</section>
+			<section class="main-contacts mobile project-contacts">
+				<div class="main-contacts__container container">
+					<div class="main-contacts__inner">
+						<div class="main-contacts__left">
+							<div class="main-contacts__title h1">Be in touch</div>
+							<div class="main-contacts__info text-18">
+								<div><a href="tel:+7 (495) 981-5000">+7 (495) 981-5000</a></div>
+								<div><a href="mailto:info@formika.ru">info@formika.ru</a></div>
+								<div>2nd Zvenigorodskaya str., 13, building 41, Moscow</div>
+							</div>
+							<div class="main-contacts__team">
+								<strong class="text-20">join our team</strong>
+								<a class="main-contacts__team-btn btn hover" href="#">View job<span></span></a>
+							</div>
+						</div>
+						<div class="main-contacts__center">
+							<div class="main-contacts__center--bg"></div>
+							<div class="main-contacts__center--circle"></div>
+							<div class="main-contacts__center--overlay"></div>
+						</div>
+						<div class="main-contacts__right">
+							<div class="main-contacts__form-item">
+								<form class="main-contacts__form form">
+									<div class="form-main">
+										<label class="form-label">
+											<input type="text" class="input" placeholder="name" data-required="true">
+										</label>
+										<label class="form-label">
+											<input type="email" class="input" placeholder="email" data-required="true">
+										</label>
+										<label class="form-label">
+											<input type="tel" class="input" placeholder="phone number"
+												data-required="true" data-min-length="true">
+										</label>
+										<label class="form-label">
+											<input type="text" class="input" placeholder="message">
+										</label>
+									</div>
+									<div class="form__footer">
+										<label class="form-label">
+											<input type="file" class="input-file">
+											<div class="custom-file">
+												<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+													viewBox="0 0 24 24" fill="none">
+													<path
+														d="M12.3297 12.1499L9.85969 14.6199C8.48969 15.9899 8.48969 18.1999 9.85969 19.5699C11.2297 20.9399 13.4397 20.9399 14.8097 19.5699L18.6997 15.6799C21.4297 12.9499 21.4297 8.50992 18.6997 5.77992C15.9697 3.04992 11.5297 3.04992 8.79969 5.77992L4.55969 10.0199C2.21969 12.3599 2.21969 16.1599 4.55969 18.5099"
+														stroke="#727272" stroke-width="1.5" stroke-linecap="round"
+														stroke-linejoin="round" />
+												</svg>
+												<span>add file</span>
+											</div>
+											<div class="custom-preview">
+												<div class="custom-preview__icon">
+													<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+														viewBox="0 0 24 24" fill="none">
+														<path
+															d="M12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22Z"
+															stroke="#727272" stroke-width="1.5" stroke-linecap="round"
+															stroke-linejoin="round" />
+														<path d="M7.75 12L10.58 14.83L16.25 9.16998" stroke="#727272"
+															stroke-width="1.5" stroke-linecap="round"
+															stroke-linejoin="round" />
+													</svg>
+												</div>
+												<div class="custom-preview__name"></div>
+												<div class="custom-preview__size"></div>
+											</div>
+										</label>
+										<button class="btn hover">send<span></span></button>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 			<include src="./components/footer.html"></include>
 		</div>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 	<script>
-		if (window.outerWidth >= 768) {
-			Fancybox.bind(`[data-fancybox="gallery"]`, {
-				// Your custom options
-				beforeShow: function () {
-					$(this.content).addClass("fadeIn"); // Добавьте класс анимации к элементу fancybox
-				},
-				width: "100%",
-				height: "100%",
-				tpl: {
-					closeButton:
-						`<button data-fancybox-close class="f-button is-close-btn" title="{{CLOSE}}">
+		Fancybox.bind(`[data-fancybox="gallery"]`, {
+			width: "100%",
+			height: "100%",
+			tpl: {
+				closeButton:
+					`<button data-fancybox-close class="f-button is-close-btn" title="{{CLOSE}}">
 						<svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none">
 							<path fill-rule="evenodd" clip-rule="evenodd" d="M0.53033 16.4405C0.237437 16.1476 0.237437 15.6727 0.53033 15.3798L15.3796 0.530584C15.6725 0.237691 16.1473 0.237691 16.4402 0.530584C16.7331 0.823477 16.7331 1.29835 16.4402 1.59124L1.59099 16.4405C1.2981 16.7334 0.823223 16.7334 0.53033 16.4405Z" fill="white" />
 							<path fill-rule="evenodd" clip-rule="evenodd" d="M0.53033 0.536076C0.823223 0.243183 1.2981 0.243183 1.59099 0.536076L16.4402 15.3853C16.7331 15.6782 16.7331 16.1531 16.4402 16.446C16.1473 16.7389 15.6725 16.7389 15.3796 16.446L0.53033 1.59674C0.237437 1.30384 0.237437 0.828969 0.53033 0.536076Z" fill="white" />
 						</svg>
 					</button >`,
-					main: `<div class="fancybox__container" role="dialog" aria-modal="true" aria-label="{{MODAL}}" tabindex="-1">
+				main: `<div class="fancybox__container" role="dialog" aria-modal="true" aria-label="{{MODAL}}" tabindex="-1">
                         <div class="fancybox__backdrop"></div>
                         <div class="fancybox__carousel"></div>
                         <button data-fancybox-close class="f-button is-close-btn" title="{{CLOSE}}">
@@ -262,22 +332,21 @@
 							</svg>
 						</button>
                         </div>`
-				},
-				Carousel: {
-					infinite: true,
-					Navigation: {
-						prevTpl: `<svg xmlns="http://www.w3.org/2000/svg" width="24" height="17" viewBox="0 0 24 17" fill="none">
+			},
+			Carousel: {
+				infinite: true,
+				Navigation: {
+					prevTpl: `<svg xmlns="http://www.w3.org/2000/svg" width="24" height="17" viewBox="0 0 24 17" fill="none">
   								<path fill-rule="evenodd" clip-rule="evenodd" d="M9.48346 16.4561C9.19056 16.749 8.71569 16.749 8.42279 16.4561L0.835296 8.86861C0.694644 8.72796 0.615626 8.53719 0.615626 8.33828C0.615626 8.13937 0.694644 7.9486 0.835296 7.80795L8.4228 0.220453C8.71569 -0.0724402 9.19056 -0.0724402 9.48346 0.220453C9.77635 0.513346 9.77635 0.988219 9.48346 1.28111L2.42629 8.33828L9.48346 15.3955C9.77635 15.6883 9.77635 16.1632 9.48346 16.4561Z" fill="white"/>
   								<path fill-rule="evenodd" clip-rule="evenodd" d="M23.3672 8.33789C23.3672 8.7521 23.0314 9.08789 22.6172 9.08789L1.57969 9.08789C1.16548 9.08789 0.829689 8.7521 0.829689 8.33789C0.829689 7.92368 1.16548 7.58789 1.57969 7.58789L22.6172 7.58789C23.0314 7.58789 23.3672 7.92368 23.3672 8.33789Z" fill="white"/>
 							</svg>`,
-						nextTpl: `<svg xmlns="http://www.w3.org/2000/svg" width="23" height="17" viewBox="0 0 23 17" fill="none">
+					nextTpl: `<svg xmlns="http://www.w3.org/2000/svg" width="23" height="17" viewBox="0 0 23 17" fill="none">
 							<path fill-rule="evenodd" clip-rule="evenodd" d="M13.8759 0.21967C14.1688 -0.0732233 14.6437 -0.0732233 14.9366 0.21967L22.5241 7.80717C22.6647 7.94782 22.7438 8.13859 22.7438 8.3375C22.7438 8.53641 22.6647 8.72718 22.5241 8.86783L14.9366 16.4553C14.6437 16.7482 14.1688 16.7482 13.8759 16.4553C13.583 16.1624 13.583 15.6876 13.8759 15.3947L20.9331 8.3375L13.8759 1.28033C13.583 0.987437 13.583 0.512563 13.8759 0.21967Z" fill="white"/>
 							<path fill-rule="evenodd" clip-rule="evenodd" d="M0 8.33789C0 7.92368 0.335786 7.58789 0.75 7.58789H21.7875C22.2017 7.58789 22.5375 7.92368 22.5375 8.33789C22.5375 8.7521 22.2017 9.08789 21.7875 9.08789H0.75C0.335786 9.08789 0 8.7521 0 8.33789Z" fill="white"/>
 							</svg>`,
-					},
 				},
-			});
-		}
+			},
+		});
 
 	</script>
 </body>
