--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 				<ul class="index__list">
 					<li><a href="./main.html" style="font-size: 5rem;">Главная</a></li>
 					<li><a href="./project-detail.html" style="font-size: 5rem;">Детальная проекта</a></li>
-					<!-- <li><a href="./main.html" style="font-size: 5rem;">Главная</a></li> -->
+					<li><a href="./404.html" style="font-size: 5rem;">404</a></li>
 					<!-- <li><a href="./main.html" style="font-size: 5rem;">Главная</a></li> -->
 					<!-- <li><a href="./main.html" style="font-size: 5rem;">Главная</a></li> -->
 					<!-- <li><a href="./main.html" style="font-size: 5rem;">Главная</a></li> -->
