feat: about page

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 					<li><a href="./main.html" style="font-size: 5rem;">Главная</a></li>
 					<li><a href="./project-detail.html" style="font-size: 5rem;">Детальная проекта</a></li>
 					<li><a href="./404.html" style="font-size: 5rem;">404</a></li>
-					<!-- <li><a href="./main.html" style="font-size: 5rem;">Главная</a></li> -->
+					<li><a href="./about.html" style="font-size: 5rem;">О компании</a></li>
 					<!-- <li><a href="./main.html" style="font-size: 5rem;">Главная</a></li> -->
 					<!-- <li><a href="./main.html" style="font-size: 5rem;">Главная</a></li> -->
 					<!-- <li><a href="./main.html" style="font-size: 5rem;">Главная</a></li> -->
