fix: partners block

--- a/src/about.html
+++ b/src/about.html
@@ -368,29 +368,19 @@
 					</div>
 					<div class="about-clients__horizontal">
 						<div class="about-clients__horizontal-container">
-							<div class="about-clients__horizontal-card">
+							<div class="about-clients__horizontal-cards">
 								<img src="./assets/images/about/partner-1.webp" alt="">
-							</div>
-							<div class="about-clients__horizontal-card">
 								<img src="./assets/images/about/partner-2.webp" alt="">
-							</div>
-							<div class="about-clients__horizontal-card">
 								<img src="./assets/images/about/partner-3.webp" alt="">
-							</div>
-							<div class="about-clients__horizontal-card">
 								<img src="./assets/images/about/partner-4.webp" alt="">
-							</div>
-							<div class="about-clients__horizontal-card">
 								<img src="./assets/images/about/partner-5.webp" alt="">
 							</div>
-							<div class="about-clients__horizontal-card">
+							<div class="about-clients__horizontal-cards">
 								<img src="./assets/images/about/partner-1.webp" alt="">
-							</div>
-							<div class="about-clients__horizontal-card">
 								<img src="./assets/images/about/partner-2.webp" alt="">
-							</div>
-							<div class="about-clients__horizontal-card">
 								<img src="./assets/images/about/partner-3.webp" alt="">
+								<img src="./assets/images/about/partner-4.webp" alt="">
+								<img src="./assets/images/about/partner-5.webp" alt="">
 							</div>
 						</div>
 					</div>
