--- a/src/main.html
+++ b/src/main.html
@@ -154,8 +154,7 @@
 								<div class="main-map__map-bg">
 									<div class="main-map__map-marks">
 										<div class="main-map__map-marks--item">
-											<svg xmlns="http://www.w3.org/2000/svg" width="56" height="61"
-												viewBox="0 0 56 61" fill="none">
+											<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 56 61" fill="none">
 												<path
 													d="M36.9634 27.8795C36.9634 32.9003 32.8985 36.9671 27.8656 36.9671C22.7461 36.9671 18.6227 32.7357 18.7901 27.5782C18.9463 22.8001 22.8745 18.9007 27.6563 18.7947C32.7869 18.6747 36.9634 22.789 36.9634 27.8795Z"
 													fill="#785B08" />
@@ -165,8 +164,7 @@
 											</svg>
 										</div>
 										<div class="main-map__map-marks--item">
-											<svg xmlns="http://www.w3.org/2000/svg" width="56" height="61"
-												viewBox="0 0 56 61" fill="none">
+											<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 56 61" fill="none">
 												<path
 													d="M36.9634 27.8795C36.9634 32.9003 32.8985 36.9671 27.8656 36.9671C22.7461 36.9671 18.6227 32.7357 18.7901 27.5782C18.9463 22.8001 22.8745 18.9007 27.6563 18.7947C32.7869 18.6747 36.9634 22.789 36.9634 27.8795Z"
 													fill="#785B08" />
@@ -176,8 +174,7 @@
 											</svg>
 										</div>
 										<div class="main-map__map-marks--item">
-											<svg xmlns="http://www.w3.org/2000/svg" width="56" height="61"
-												viewBox="0 0 56 61" fill="none">
+											<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 56 61" fill="none">
 												<path
 													d="M36.9634 27.8795C36.9634 32.9003 32.8985 36.9671 27.8656 36.9671C22.7461 36.9671 18.6227 32.7357 18.7901 27.5782C18.9463 22.8001 22.8745 18.9007 27.6563 18.7947C32.7869 18.6747 36.9634 22.789 36.9634 27.8795Z"
 													fill="#785B08" />
@@ -187,8 +184,7 @@
 											</svg>
 										</div>
 										<div class="main-map__map-marks--item">
-											<svg xmlns="http://www.w3.org/2000/svg" width="56" height="61"
-												viewBox="0 0 56 61" fill="none">
+											<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 56 61" fill="none">
 												<path
 													d="M36.9634 27.8795C36.9634 32.9003 32.8985 36.9671 27.8656 36.9671C22.7461 36.9671 18.6227 32.7357 18.7901 27.5782C18.9463 22.8001 22.8745 18.9007 27.6563 18.7947C32.7869 18.6747 36.9634 22.789 36.9634 27.8795Z"
 													fill="#785B08" />
@@ -198,8 +194,7 @@
 											</svg>
 										</div>
 										<div class="main-map__map-marks--item">
-											<svg xmlns="http://www.w3.org/2000/svg" width="56" height="61"
-												viewBox="0 0 56 61" fill="none">
+											<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 56 61" fill="none">
 												<path
 													d="M36.9634 27.8795C36.9634 32.9003 32.8985 36.9671 27.8656 36.9671C22.7461 36.9671 18.6227 32.7357 18.7901 27.5782C18.9463 22.8001 22.8745 18.9007 27.6563 18.7947C32.7869 18.6747 36.9634 22.789 36.9634 27.8795Z"
 													fill="#785B08" />
@@ -209,8 +204,7 @@
 											</svg>
 										</div>
 										<div class="main-map__map-marks--item active">
-											<svg xmlns="http://www.w3.org/2000/svg" width="56" height="61"
-												viewBox="0 0 56 61" fill="none">
+											<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 56 61" fill="none">
 												<path
 													d="M36.9634 27.8795C36.9634 32.9003 32.8985 36.9671 27.8656 36.9671C22.7461 36.9671 18.6227 32.7357 18.7901 27.5782C18.9463 22.8001 22.8745 18.9007 27.6563 18.7947C32.7869 18.6747 36.9634 22.789 36.9634 27.8795Z"
 													fill="#785B08" />
@@ -220,8 +214,7 @@
 											</svg>
 										</div>
 										<div class="main-map__map-marks--item">
-											<svg xmlns="http://www.w3.org/2000/svg" width="56" height="61"
-												viewBox="0 0 56 61" fill="none">
+											<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 56 61" fill="none">
 												<path
 													d="M36.9634 27.8795C36.9634 32.9003 32.8985 36.9671 27.8656 36.9671C22.7461 36.9671 18.6227 32.7357 18.7901 27.5782C18.9463 22.8001 22.8745 18.9007 27.6563 18.7947C32.7869 18.6747 36.9634 22.789 36.9634 27.8795Z"
 													fill="#785B08" />
@@ -231,8 +224,7 @@
 											</svg>
 										</div>
 										<div class="main-map__map-marks--item">
-											<svg xmlns="http://www.w3.org/2000/svg" width="56" height="61"
-												viewBox="0 0 56 61" fill="none">
+											<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 56 61" fill="none">
 												<path
 													d="M36.9634 27.8795C36.9634 32.9003 32.8985 36.9671 27.8656 36.9671C22.7461 36.9671 18.6227 32.7357 18.7901 27.5782C18.9463 22.8001 22.8745 18.9007 27.6563 18.7947C32.7869 18.6747 36.9634 22.789 36.9634 27.8795Z"
 													fill="#785B08" />
