feat: about mobile

--- a/src/about.html
+++ b/src/about.html
@@ -50,8 +50,16 @@
 						<div class="about-banner__inner">
 							<div class="about-banner__content">
 								<div class="about-banner__title">
-									<strong class="h1">About <br> our company</strong>
+									<strong class="h1">About <br class="desktop"> our company</strong>
 									<span>since 2000</span>
+								</div>
+								<div class="about-banner__image mobile">
+									<!-- <video autoplay playsinline loop preload="auto" muted
+										poster="./assets/images/main/video-load.jpg">
+										<source src="./assets/video/main-video.mp4" type="video/mp4">
+										<source src="./assets/video/main-video.webm" type="video/webm">
+									</video> -->
+									<img src="./assets/images/about/about-banner.webp" alt="">
 								</div>
 								<div class="about-banner__description text-24">FORME provide all kinds of exhibition
 									services.
@@ -60,7 +68,7 @@
 								<button class="about-banner__btn btn hover" type="button">Send
 									massage<span></span></button>
 							</div>
-							<div class="about-banner__image">
+							<div class="about-banner__image desktop">
 								<!-- <video autoplay playsinline loop preload="auto" muted
 									poster="./assets/images/main/video-load.jpg">
 									<source src="./assets/video/main-video.mp4" type="video/mp4">
@@ -151,8 +159,8 @@
 									</div>
 									<div class="about-advantages__item">
 										<div class="about-advantages__item-icon">
-											<svg xmlns="http://www.w3.org/2000/svg" width="48" height="49"
-												viewBox="0 0 48 49" fill="none">
+											<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"
+												viewBox="0 0 48 48" fill="none">
 												<path
 													d="M33.9395 25V34C33.9395 41.5 30.9395 44.5 23.4395 44.5H14.4395C6.93945 44.5 3.93945 41.5 3.93945 34V25C3.93945 17.5 6.93945 14.5 14.4395 14.5H23.4395C30.9395 14.5 33.9395 17.5 33.9395 25Z"
 													stroke="#785B08" stroke-width="1.5" stroke-linecap="round"
@@ -190,8 +198,8 @@
 									</div>
 									<div class="about-advantages__item">
 										<div class="about-advantages__item-icon">
-											<svg xmlns="http://www.w3.org/2000/svg" width="48" height="49"
-												viewBox="0 0 48 49" fill="none">
+											<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"
+												viewBox="0 0 48 48" fill="none">
 												<path
 													d="M36.0002 14.82C35.8802 14.8 35.7402 14.8 35.6202 14.82C32.8602 14.72 30.6602 12.46 30.6602 9.66C30.6602 6.8 32.9602 4.5 35.8202 4.5C38.6802 4.5 40.9801 6.82 40.9801 9.66C40.9601 12.46 38.7602 14.72 36.0002 14.82Z"
 													stroke="#785B08" stroke-width="1.5" stroke-linecap="round"
@@ -223,8 +231,8 @@
 									</div>
 									<div class="about-advantages__item">
 										<div class="about-advantages__item-icon">
-											<svg xmlns="http://www.w3.org/2000/svg" width="48" height="49"
-												viewBox="0 0 48 49" fill="none">
+											<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"
+												viewBox="0 0 48 48" fill="none">
 												<path
 													d="M18 44.5H30C40 44.5 44 40.5 44 30.5V18.5C44 8.5 40 4.5 30 4.5H18C8 4.5 4 8.5 4 18.5V30.5C4 40.5 8 44.5 18 44.5Z"
 													stroke="#785B08" stroke-width="1.5" stroke-linecap="round"
@@ -244,8 +252,8 @@
 									</div>
 									<div class="about-advantages__item">
 										<div class="about-advantages__item-icon">
-											<svg xmlns="http://www.w3.org/2000/svg" width="48" height="49"
-												viewBox="0 0 48 49" fill="none">
+											<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"
+												viewBox="0 0 48 48" fill="none">
 												<path
 													d="M19.2 40.5H28.8C36.8 40.5 40 37.3 40 29.3V19.7C40 11.7 36.8 8.5 28.8 8.5H19.2C11.2 8.5 8 11.7 8 19.7V29.3C8 37.3 11.2 40.5 19.2 40.5Z"
 													stroke="#785B08" stroke-width="1.5" stroke-linecap="round"
@@ -409,9 +417,7 @@
 						<div class="main-contacts__inner">
 							<div class="main-contacts__left">
 								<div class="main-contacts__title h1">Be in touch</div>
-								<div class="main-contacts__subtitle mobile">Here you will find all the necessary contact
-									information for feedback.</div>
-								<div class="main-contacts__info text-18 desktop">
+								<div class="main-contacts__info text-18">
 									<div><a href="tel:+7 (495) 981-5000">+7 (495) 981-5000</a></div>
 									<div><a href="mailto:info@formika.ru">info@formika.ru</a></div>
 									<div>2nd Zvenigorodskaya str., 13, building 41, Moscow</div>
@@ -429,24 +435,6 @@
 							<div class="main-contacts__right">
 								<div class="main-contacts__form-title h2 desktop">Send message</div>
 								<div class="main-contacts__form-item">
-									<div class="main-contacts__form-subtitle subtitle"><span></span>Contacts</div>
-									<div class="main-contacts__info text-18 mobile">
-										<div>
-											<span>phone number:</span>
-											<a href="tel:+7 (495) 981-5000">+7 (495) 981-5000</a>
-										</div>
-										<div>
-											<span>email:</span>
-											<a href="mailto:info@formika.ru">info@formika.ru</a>
-										</div>
-										<div>
-											<span>address:</span>
-											2nd Zvenigorodskaya str., 13, building 41, Moscow
-										</div>
-									</div>
-								</div>
-								<div class="main-contacts__form-item">
-									<div class="main-contacts__form-subtitle subtitle"><span></span>send message</div>
 									<form class="main-contacts__form form">
 										<div class="form-main">
 											<label class="form-label">
