--- a/src/main.html
+++ b/src/main.html
@@ -248,9 +248,7 @@
 					<div class="main-contacts__inner">
 						<div class="main-contacts__left">
 							<div class="main-contacts__title h1">Be in touch</div>
-							<div class="main-contacts__subtitle mobile">Here you will find all the necessary contact
-								information for feedback.</div>
-							<div class="main-contacts__info text-18 desktop">
+							<div class="main-contacts__info text-18">
 								<div><a href="tel:+7 (495) 981-5000">+7 (495) 981-5000</a></div>
 								<div><a href="mailto:info@formika.ru">info@formika.ru</a></div>
 								<div>2nd Zvenigorodskaya str., 13, building 41, Moscow</div>
@@ -268,24 +266,6 @@
 						<div class="main-contacts__right">
 							<div class="main-contacts__form-title h2 desktop">Send message</div>
 							<div class="main-contacts__form-item">
-								<div class="main-contacts__form-subtitle subtitle"><span></span>Contacts</div>
-								<div class="main-contacts__info text-18 mobile">
-									<div>
-										<span>phone number:</span>
-										<a href="tel:+7 (495) 981-5000">+7 (495) 981-5000</a>
-									</div>
-									<div>
-										<span>email:</span>
-										<a href="mailto:info@formika.ru">info@formika.ru</a>
-									</div>
-									<div>
-										<span>address:</span>
-										2nd Zvenigorodskaya str., 13, building 41, Moscow
-									</div>
-								</div>
-							</div>
-							<div class="main-contacts__form-item">
-								<div class="main-contacts__form-subtitle subtitle"><span></span>send message</div>
 								<form class="main-contacts__form form">
 									<div class="form-main">
 										<label class="form-label">
