--- a/src/project-detail.html
+++ b/src/project-detail.html
@@ -230,7 +230,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="main-contacts mobile project-contacts">
+			<section class="main-contacts">
 				<div class="main-contacts__container container">
 					<div class="main-contacts__inner">
 						<div class="main-contacts__left">
@@ -251,6 +251,7 @@
 							<div class="main-contacts__center--overlay"></div>
 						</div>
 						<div class="main-contacts__right">
+							<div class="main-contacts__form-title h2 desktop">Send message</div>
 							<div class="main-contacts__form-item">
 								<form class="main-contacts__form form">
 									<div class="form-main">
@@ -270,7 +271,8 @@
 									</div>
 									<div class="form__footer">
 										<label class="form-label">
-											<input type="file" class="input-file">
+											<input type="file" class="input-file"
+												accept=".jpg, .jpeg, .png, .gif, .webp" hidden>
 											<div class="custom-file">
 												<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
 													viewBox="0 0 24 24" fill="none">
