--- a/src/about.html
+++ b/src/about.html
@@ -340,7 +340,7 @@
 					<div class="about-wedo__container container">
 						<div class="about-wedo__inner">
 							<div class="about-wedo__subtitle subtitle"><span></span>what we do</div>
-							<div class="about-wedo__wrapper">
+							<div class="about-wedo__wrapper desktop">
 								<div class="about-wedo__content">
 									<ul class="about-wedo__list">
 										<li>
@@ -380,6 +380,107 @@
 									</div>
 									<div class="about-wedo__cards-img">
 										<img src="./assets/images/about/list-image-1.webp" alt="">
+									</div>
+								</div>
+							</div>
+							<div class="about-wedo__wrapper mobile">
+								<div class="about-wedo__accordion-item">
+									<button class="about-wedo__accordion-button">
+										<div class="about-wedo__accordion-button--content">
+											<span>01</span>
+											<strong>exhibition stands</strong>
+										</div>
+										<div class="about-wedo__accordion-button--icon">
+											<svg class="plus" xmlns="http://www.w3.org/2000/svg" width="24" height="25"
+												viewBox="0 0 24 25" fill="none">
+												<path d="M2 13H22M12 3L12 23" stroke="#785B08" stroke-width="1.5"
+													stroke-linecap="round" stroke-linejoin="round" />
+											</svg>
+											<svg class="minus" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+												viewBox="0 0 24 24" fill="none">
+												<path d="M2 12.5H22" stroke="#785B08" stroke-width="1.5"
+													stroke-linecap="round" stroke-linejoin="round" />
+											</svg>
+										</div>
+									</button>
+									<div class="about-wedo__accordion-content">
+										<div class="about-wedo__accordion-image">
+											<img src="./assets/images/about/list-image-1.webp" alt="">
+										</div>
+										<div class="about-wedo__accordion-text">We offer an entire project
+											lifecycle, from exhibition strategy
+											and proposition development, through to booth design, construction and event
+											management.
+											Our understanding of exhibition management will deliver you the maximum
+											effect.</div>
+										<button class="about-wedo__accordion-btn btn hover">send
+											massage<span></span></button>
+									</div>
+								</div>
+								<div class="about-wedo__accordion-item">
+									<button class="about-wedo__accordion-button">
+										<div class="about-wedo__accordion-button--content">
+											<span>02</span>
+											<strong>holding events</strong>
+										</div>
+										<div class="about-wedo__accordion-button--icon">
+											<svg class="plus" xmlns="http://www.w3.org/2000/svg" width="24" height="25"
+												viewBox="0 0 24 25" fill="none">
+												<path d="M2 13H22M12 3L12 23" stroke="#785B08" stroke-width="1.5"
+													stroke-linecap="round" stroke-linejoin="round" />
+											</svg>
+											<svg class="minus" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+												viewBox="0 0 24 24" fill="none">
+												<path d="M2 12.5H22" stroke="#785B08" stroke-width="1.5"
+													stroke-linecap="round" stroke-linejoin="round" />
+											</svg>
+										</div>
+									</button>
+									<div class="about-wedo__accordion-content">
+										<div class="about-wedo__accordion-image">
+											<img src="./assets/images/about/list-image-1.webp" alt="">
+										</div>
+										<div class="about-wedo__accordion-text">We offer an entire project
+											lifecycle, from exhibition strategy
+											and proposition development, through to booth design, construction and event
+											management.
+											Our understanding of exhibition management will deliver you the maximum
+											effect.</div>
+										<button class="about-wedo__accordion-btn btn hover">send
+											massage<span></span></button>
+									</div>
+								</div>
+								<div class="about-wedo__accordion-item">
+									<button class="about-wedo__accordion-button">
+										<div class="about-wedo__accordion-button--content">
+											<span>03</span>
+											<strong>DESIGN</strong>
+										</div>
+										<div class="about-wedo__accordion-button--icon">
+											<svg class="plus" xmlns="http://www.w3.org/2000/svg" width="24" height="25"
+												viewBox="0 0 24 25" fill="none">
+												<path d="M2 13H22M12 3L12 23" stroke="#785B08" stroke-width="1.5"
+													stroke-linecap="round" stroke-linejoin="round" />
+											</svg>
+											<svg class="minus" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+												viewBox="0 0 24 24" fill="none">
+												<path d="M2 12.5H22" stroke="#785B08" stroke-width="1.5"
+													stroke-linecap="round" stroke-linejoin="round" />
+											</svg>
+										</div>
+									</button>
+									<div class="about-wedo__accordion-content">
+										<div class="about-wedo__accordion-image">
+											<img src="./assets/images/about/list-image-1.webp" alt="">
+										</div>
+										<div class="about-wedo__accordion-text">We offer an entire project
+											lifecycle, from exhibition strategy
+											and proposition development, through to booth design, construction and event
+											management.
+											Our understanding of exhibition management will deliver you the maximum
+											effect.</div>
+										<button class="about-wedo__accordion-btn btn hover">send
+											massage<span></span></button>
 									</div>
 								</div>
 							</div>
