--- a/src/main.html
+++ b/src/main.html
@@ -34,13 +34,13 @@
 									<div class="main-solutions__wrapper-title--top">We believe in</div>
 									<div class="main-solutions__wrapper-title--bottom">smart solutions</div>
 								</div>
-								<div class="main-solutions__wrapper-description text-24">Our company is a leading
-									provider of
-									premium segment exhibition stand construction services. </div>
+								<div class="main-solutions__wrapper-description text-24">We are a leading exhibition
+									contractor specializing in custom build stands with over 20000 sqm of exhibitions
+									annually.</div>
 								<div class="main-solutions__wrapper-text text-18">
-									<strong>We excel in designing and building bespoke, high-quality exhibition
-										displays
-										that captivate and impress at various events and exhibitions.</strong>
+									<strong>We integrate unique design and top-quality manufacturing to provide our
+										customers with state-of-the-art products in a digital world.
+										Multimedia exhibition solutions are our strong point.</strong>
 									<button class="main-solutions__wrapper-btn btn hover" type="button">Get
 										presentation<span></span></button>
 								</div>
